Add the character editor.
