# freechat-sdk/typescript/apis/PromptApi.ts
@@ -724,6 +724,44 @@ export class PromptApiRequestFactory extends BaseAPIRequestFactory {
     }
 
     /**
+     * Create a new prompt name starting with a desired name.
+     * Create New Prompt Name
+     * @param desired Desired name
+     */
+    public async newPromptName(desired: string, _options?: Configuration): Promise<RequestContext> {
+        let _config = _options || this.configuration;
+
+        // verify required parameter 'desired' is not null or undefined
+        if (desired === null || desired === undefined) {
+            throw new RequiredError("PromptApi", "newPromptName", "desired");
+        }
+
+
+        // Path Params
+        const localVarPath = '/api/v1/prompt/create/name/{desired}'
+            .replace('{' + 'desired' + '}', encodeURIComponent(String(desired)));
+
+        // Make Request Context
+        const requestContext = _config.baseServer.makeRequestContext(localVarPath, HttpMethod.GET);
+        requestContext.setHeaderParam("Accept", "application/json, */*;q=0.8")
+
+
+        let authMethod: SecurityAuthentication | undefined;
+        // Apply auth methods
+        authMethod = _config.authMethods["bearerAuth"]
+        if (authMethod?.applySecurityAuthentication) {
+            await authMethod?.applySecurityAuthentication(requestContext);
+        }
+        
+        const defaultAuth: SecurityAuthentication | undefined = _options?.authMethods?.default || this.configuration?.authMethods?.default
+        if (defaultAuth?.applySecurityAuthentication) {
+            await defaultAuth?.applySecurityAuthentication(requestContext);
+        }
+
+        return requestContext;
+    }
+
+    /**
      * Publish prompt, draft content becomes formal content, version number increases by 1. After successful publication, a new promptId will be generated and returned. You need to specify the visibility for publication.
      * Publish Prompt
      * @param promptId The promptId to be published
@@ -1479,6 +1517,35 @@ export class PromptApiResponseProcessor {
                 ObjectSerializer.parse(await response.body.text(), contentType),
                 "Array<PromptItemForNameDTO>", ""
             ) as Array<PromptItemForNameDTO>;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        throw new ApiException<string | Blob | undefined>(response.httpStatusCode, "Unknown API Status Code!", await response.getBodyAsAny(), response.headers);
+    }
+
+    /**
+     * Unwraps the actual response sent by the server from the response context and deserializes the response content
+     * to the expected objects
+     *
+     * @params response Response returned by the server for a request to newPromptName
+     * @throws ApiException if the response code was not in [200, 299]
+     */
+     public async newPromptNameWithHttpInfo(response: ResponseContext): Promise<HttpInfo<string >> {
+        const contentType = ObjectSerializer.normalizeMediaType(response.headers["content-type"]);
+        if (isCodeInRange("200", response.httpStatusCode)) {
+            const body: string = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "string", ""
+            ) as string;
+            return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
+        }
+
+        // Work around for missing responses in specification, e.g. for petstore.yaml
+        if (response.httpStatusCode >= 200 && response.httpStatusCode <= 299) {
+            const body: string = ObjectSerializer.deserialize(
+                ObjectSerializer.parse(await response.body.text(), contentType),
+                "string", ""
+            ) as string;
             return new HttpInfo(response.httpStatusCode, response.headers, response.body, body);
         }
 
